@@ -3,14 +3,14 @@ Hash: SHA256
 
 AUX chromium-r1.patch 1582 SHA256 9e364b99c9a45daccdb895f230a655413134507f789a9c1ca9d4faed4148c4eb SHA512 808daad5afed13a6d3926c9f9ab5cb58f80e16969533022c7ee959147908bb2c12d066d2125a6b6975ef9304d9b8d49c39aeb0a047009adabb4529e3cf54498f WHIRLPOOL 330f2ff7e509d1012eee6f38752997aeb9cc066e57c62e08f33f25835fac7f72bc67f06a91ef4aac072ff5dac58fd257d52874fcd95e6078dfc00f166d69e8bb
 AUX ffmpeg-openssl-1.1.0.patch 1222 SHA256 3a456f8dc28fa41e5d3ca8feb4e62c9b1372a1ba9d7f716c9324bbe96f5c880e SHA512 e60c247f83508a4622f98c1967ee632bfd49a62ac352f73da84faea4d265b8facd0ffa2f7ca9a702ee9c1020067a0d458c8a60f13cee8dba1ae484fa88e629b0 WHIRLPOOL 53cf6ae90fe6ef7767f0ee0d027a2dee6c16a1f5d607c32a66d6dcbe78bac7d8c0f2ac19152e882c83f6848d7938e0623cacbd5265bac666fd4f111428bed65f
-DIST ffmpeg-4.1.3.tar.bz2 10689073 SHA256 29a679685bd7bc29158110f367edf67b31b451f2176f9d79d0f342b9e22d6a2a SHA512 d0f8b3ee7b55e67b1c7ad9610a7b19a15acfc35dc843683502e536ebcc2e8678b55325532c0039b764cc978e95f83afb48bd24304abaee26f26d3247a8310bfe WHIRLPOOL 24b67ffcd5ab2e45b61e51d47a251533f1e3428b857fc2ff162c37634e86604de0772e4d6d5b93cb2c50a8c6a7450a04c847249f31b04d8944e6dda7ffcf1eb5
-EBUILD ffmpeg-4.1.3.ebuild 16966 SHA256 0a81dff9c7eca7dedfbcc0668e27f254c54b386127adc6678bccb3ca65da7c8b SHA512 e9b2c3d064d7368f74dbff3f3b818b32f34faee08284218900fd343d8d992f032161b2d760606ffc73bd19de99f7047d49b5c38cf81af6413c4f8ca2c0a2011a WHIRLPOOL 2c0a77ee687864a121a133c230b96afa39ec064fb410e1212912adda6ac0e4382d9518cda3388863f0663357e489fa64a2cbe3920ef2e794479b6c2ff24046c4
-MISC ChangeLog 500 SHA256 2bcd4712cf59b64093632d5fbb77a4eb56715be0c3f2245722386d633007cece SHA512 56b98668d493564e4fb7448b0eb639b34bd968787af019394cb5dea438f06675e073de589984108bab018f4242212bf57da3283d54cbd6d861d582524104d686 WHIRLPOOL ca4506ad4a7af4ba90ec96db01b0b6df11f13c881879483f1cc2c891728f1c3c8ce794f92e924164e46647cfee7709c64b52459ebcfa699a6d0ade873938cec6
-MISC metadata.xml 5206 SHA256 9029d7ff098e5389df0a57996d9594df82056d5d7c3ce4424db88a2926f05910 SHA512 54b6473dc456ec8e675c8d803889aa58c8490b26fdaf5e1adf1ecff605eae614ed2dd070bb3e82a33386f93161902e1a2d06668e1e4ca820055c08332a08c021 WHIRLPOOL 08ca7ba9dd24461db4f35956368ab6c8f3d51d3f0528a84023cc592afadc65be23ba0a2aa77624ab723fcb4d067c796b21b8e6d807e8466bccf364ca48fbbcfc
+DIST ffmpeg-4.2.1.tar.bz2 10953293 SHA256 682a9fa3f6864d7f0dbf224f86b129e337bc60286e0d00dffcd710998d521624 SHA512 5bd556546716ccb5292289c3092c11f216e573d0b09a015fdb568dee7544878d057d922a63758867f0343a09262d7b51023e862b70cefc529875f2319e716de4 WHIRLPOOL e482e7d54b7e76bd5daf6d0cd113fb2cba3c5bedc37949b1849edcfde84bbf68a5912c658a94eb566c7443aa87ddde563bd104a774d155d2db6036db5d7cba6f
+EBUILD ffmpeg-4.2.1.ebuild 17600 SHA256 a2b59bbdbfcab041f5d1275c2f5e5a30b60bc00a9a47d3fc4bb7acf0c68272b2 SHA512 8d13c91677e6178a323349a3a3c96c6102a62daa29b6e44e45e8cf90cb462216d2e158e7728ad5e3015a65c0264a0fdf31a4d7571085430de50b28fb4ffa737f WHIRLPOOL caa510f121a9105e187132aafecb3bfe4ee1b95d42cfc59a1ce836b8d5e26b2477545d90a95342befeeabd85fcd0cd80d631fee15411f71dcc2a54e94fd04c6d
+MISC ChangeLog 691 SHA256 6895e3e862abbd1665fe4187e9dd83d73617484761e9ba65267bcb17230488df SHA512 ee39a6086b23302a8a27f3c16186ef1a6386803bd7b9a5a8eefeb483bf81c4f7b2dacbfb5e8cb2b391b9b429ac32628c79de343584b00d6cb3c502679f0a3908 WHIRLPOOL 18ac873e42d0bb0cbe224236062475170801c4873124f930faf1eba71680a4e8dc22b6b47cb37f2f2537a66c73ec2cf2fd6312decc2984ff3648985d4eb12a5f
+MISC metadata.xml 5606 SHA256 bacfbe7ae3f63aae9fc06afd91f3c17e5b75e8847f518a7cd593f97a659e6605 SHA512 4fc4d9f9b66250d0bbd9e30468ace216db802ef7008f0c1574414cdb8388b0b217167f72a5de681ec13b91c69d769345cc27479b57c8fa479457b2e905c58ca4 WHIRLPOOL 0fc80b4ccce7ecba3af676a556cffb5445f0a4af0dfa6caa7654684f71a37967a809b7120c8780e93e88a1c73ec6dafad00520f78ccd9e430e047ec13273eb8a
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXNda4AAKCRDP2g+bNZZC
-Io22AQD9CVWeUyI1OXfWmiqyd6Ilugp9OdT6sZXOuKVQXHxDpQEA3zGHw0jgKCjG
-iXuunHPig6/rB/slkDbWTgRl0+zL2g8=
-=35VV
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXZOuEgAKCRDP2g+bNZZC
+IteaAP4jD/cPnNTcADFwcOEGkjlc+BXyHLnmUw4czpeplqBMqAD/fjbdAoVZU8kv
+jzGUv1lIA/nbGeCsxiW23tZf1+uvuAk=
+=h/4n
 -----END PGP SIGNATURE-----
