@@ -1,3 +1,9 @@
+*ffmpeg-4.2.1 (01 Oct 2019)
+
+  01 Oct 2019; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +ffmpeg-4.2.1.ebuild, -ffmpeg-4.1.3.ebuild, metadata.xml:
+  media-video/ffmpeg: Update to 4.2.1.
+
 *ffmpeg-4.1.3 (11 May 2019)
 
   11 May 2019; Andrew John Hughes <gnu_andrew@member.fsf.org>
